2007-03-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* po/ar.po: New translation.
	* po/ca.po: Likewise.
	* po/da.po: Likewise.
	* po/ru.po: Likewise.
	* po/sv.po: Likewise.
	* po/zu.po: Likewise.
	* po/LINGUAS: Add ar, ca, da, ru, sv, zu

	* po/hu.po: Update translation.

2007-02-21  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/unix_chkpwd.c (_unix_verify_password): Test for
	allocation failure in bigcrypt().
	
	* modules/pam_unix/pam_unix_passwd.c (pam_sm_chauthtok): Allow
	modification of '*' password by root.

2007-02-06  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_loginuid/pam_loginuid.c (set_loginuid): Remove
	debug syslog message when loginuid doesn't exist.

2007-02-01  Tomas Mraz  <t8m@centrum.cz>

	* xtests/tst-pam_unix3.c: Fix typos in comments.
	
	* modules/pam_unix/support.c (_unix_verify_password): Explicitly
	disallow '!' in the beginning of password hash. Treat only
	13 bytes password hash specifically. (Suggested by Solar Designer.)
	Fix a warning and test for allocation failure.
	* modules/pam_unix/unix_chkpwd.c (_unix_verify_password): Likewise.

2007-01-31  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/Makefile.am: Add new pam_unix.so tests
	* xtests/run-xtests.sh: Prefer shell scripts (wrapper)
	over binaries.
	* xtests/tst-pam_cracklib1.c: Fix typo.
	* xtests/tst-pam_unix1.c: New, for sucurity fix.
	* xtests/tst-pam_unix1.pamd: New.
	* xtests/tst-pam_unix1.sh: New.
	* xtests/tst-pam_unix2.c: New, for crypt checks.
	* xtests/tst-pam_unix2.pamd: New.
	* xtests/tst-pam_unix2.sh: New.
	* xtests/tst-pam_unix3.c: New, for bigcrypt checks.
	* xtests/tst-pam_unix3.pamd: New.
	* xtests/tst-pam_unix3.sh: New.

2007-01-23  Thorsten Kukuk  <kukuk@suse.de>

	* release 0.99.7.1

	* configure.in: Set version number to 0.99.7.1

2007-01-23  Thorsten Kukuk  <kukuk@thukuk.de>
	    Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/support.c (_unix_verify_password): Always
	compare full encrypted passwords (CVE-2007-0003).
